--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" %>
   <%= csrf_meta_tags %>
+<link href="https://fonts.googleapis.com/css?family=Neuton|Source+Code+Pro" rel="stylesheet">
  </head>
 
 <body>
