--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,30 +1,35 @@
-<p id="notice"><%= notice %></p>
+<% if notice != nil %>
+  <p id="notice" class="alert alert-success" role="alert">
+    <%= notice %>
+  </p>
+<% end %>
+<div class="nav nav-pills" role="presentation">
+  <% @my_countries.each do |c| %>
+    <li><%= link_to c.country, destinations_path(country: c.country) %></li>
+  <% end %>
+</div>
 
-<h1>Listing Destinations</h1>
+<div>
+  <h1>Listing destinations</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>City</th>
-      <th>Country</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class = "row">
     <% @destinations.each do |destination| %>
-      <tr>
-        <td><%= destination.city %></td>
-        <td><%= destination.country %></td>
-        <td><%= destination.description %></td>
-        <td><%= link_to 'Show', destination %></td>
-        <td><%= link_to 'Edit', edit_destination_path(destination) %></td>
-        <td><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class = "col-md-4">
+        <div class = "well">
+        <p><%= destination.city %></p>
+        <p><%= destination.country %></p>
+        <p><%= destination.description %></p>
+        <p>
+          <%= link_to 'Show', destination %>
+        <%= link_to 'Edit', edit_destination_path(destination) %>
+        <%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </p>
+      </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div class = "row">
+
 
 <br>
 
